[package]
name = "epitok-web"
version = "0.1.0"
authors = ["Philippe Loctaux <p@philippeloctaux.com>"]
edition = "2018"
repository = "https://github.com/x4m3/epitok-web"
license = "MIT"

[dependencies]
# web framework
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-files = "0.2.2"
actix-identity = "0.2.1"
serde = "1.0.114"
rand = "0.7.3"
chrono = "0.4.11"

# templating
askama = "0.10.3"

# environment
env_logger = "0.7.1"
log = "0.4.11"

# epitok
epitok = { git = "https://github.com/x4m3/epitok" }