[package]
name = "epitok-web"
version = "0.1.0"
authors = ["Philippe Loctaux <p@philippeloctaux.com>"]
edition = "2018"
repository = "https://github.com/x4m3/epitok-web"
license = "MIT"

[dependencies]
# web framework
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-files = "0.2.2"
actix-identity = "0.2.1"
serde = "1.0.119"
rand = "0.8.1"
chrono = "0.4.19"

# templating
askama = "0.10.5"

# environment
env_logger = "0.8.2"
log = "0.4.13"

# epitok
epitok = "0.2.0"